--- a/Proyectos/templates/Proyectos/Contrato/crear-editar.html
+++ b/Proyectos/templates/Proyectos/Contrato/crear-editar.html
@@ -1,5 +1,6 @@
 {% extends 'Proyectos/_common/base_proyectos.html' %}
 {% load static %}
+{% load eva_tags %}
 <title>{% block titulo %}{% if opcion == 'editar' %} Editar Contrato {% else %} Crear Contrato {% endif %}{% endblock %}</title>
 {% block styles %}
 <!-- DEMO related CSS below -->
@@ -43,70 +44,32 @@
                                         <div class="form-group">
                                             <div class="form-row">
                                                  <div class="col-md-6">
-                                                    <label for="cliente_select">Cliente</label>
-                                                    <select class="select2 form-control" id="cliente_select" name="cliente_id" required >
-                                                        <option value="" >Seleccione un Tipo de Cliente</option>
-                                                        {% for tercero in terceros %}
-                                                            {% if tercero.tipo_tercero.nombre.lower == 'cliente' %}
-                                                            <option value="{{ tercero.id }}" {% if tercero.id == contrato.cliente.id %} selected {% endif %}>{{ tercero.nombre }}</option>
-                                                            {% endif %}
-                                                        {% endfor %}
-                                                    </select>
-                                                     <div class="invalid-tooltip">
-                                                      Por favor seleccione un cliente.
-                                                    </div>
+                                                 {% select_tag terceros 'cliente_id' 'Seleccione un Cliente' texto_label="Cliente" value=contrato.cliente.id required="" mensaje_validacion='Por favor seleccione un cliente.' %}
+
                                                   </div>
                                                 <div class="col-md-6">
-                                                    <label for="contrato_numero">Número de contrato</label>
-                                                    <input class="form-control" id="contrato_numero" type="text"   name="numero_contrato" placeholder="Ingrese el número de contrato"   required maxlength="20" value="{{ contrato.numero_contrato }}">
-                                                    <div class="invalid-tooltip">
-                                                      Por favor digite el número de contrato.
-                                                    </div>
+                                                    {% input_text_tag 'numero_contrato' 'Número de Contrato' placeholder="Ingrese el número de contrato" required="" maxlength="20" value=contrato.numero_contrato mensaje_validacion='Por favor digite el número de contrato.'  %}
                                                 </div>
                                                 <div class="col-md-6">
-                                                    <br>
-                                                    <label for="rango_anho_select">Año</label>
-                                                    <select class="select2 form-control" type="number" id="rango_anho_select" name="rango_anho" required >
-                                                        <option value="" >Seleccione un año</option>
-                                                        {% for anho in rango_anho %}
-                                                            <option value="{{ anho }}" {% if anho == contrato.anho %}selected{% endif %}>{{ anho }}</option>
-                                                        {% endfor %}
-                                                    </select>
-                                                    <div class="invalid-tooltip">
-                                                      Por favor seleccione un año.
-                                                    </div>
+                                                 <br>
+                                                {% select_tag rango_anho 'rango_anho' 'Seleccione un año' texto_label="Año" value=contrato.anho required="" mensaje_validacion='Por favor seleccione un año.' %}
+
                                                 </div>
                                                 <div class="col-md-6">
                                                      <br>
-                                                    <label for="contrato_supervisor_nombre">Nombre del supervisor</label>
-                                                    <input class="form-control" id="contrato_supervisor_nombre" type="text"   name="supervisor_nombre" placeholder="Ingrese el nombre del supervisor" required maxlength="100" value="{{ contrato.supervisor_nombre }}">
-                                                    <div class="invalid-tooltip">
-                                                      Por favor digite el nombre del supervisor.
-                                                    </div>
+                                                    {% input_text_tag 'supervisor_nombre' 'Nombre del Supervisor' placeholder="Ingrese el nombre del supervisor" required="" maxlength="100" value=contrato.supervisor_nombre mensaje_validacion='Por favor digite el nombre del supervisor.'  %}
                                                 </div>
                                                 <div class="col-md-6">
                                                     <br>
-                                                    <label for="contrato_telefono_supervisor">Teléfono del supervisor</label>
-                                                    <input class="form-control sinx" id="contrato_telefono_supervisor" type="text"  name="supervisor_telefono" placeholder="Ingrese el número telefónico del supervisor" required maxlength="20" value="{{ contrato.supervisor_telefono }}">
-                                                    <div class="invalid-tooltip">
-                                                      Por favor digite el teléfono del supervisor.
-                                                    </div>
+                                                    {% input_text_tag 'supervisor_telefono' 'Teléfono del Supervisor' placeholder="Ingrese el número telefónico del supervisor" required="" maxlength="20" value=contrato.supervisor_telefono mensaje_validacion='Por favor digite el número telefónico del supervisor.'  %}
                                                 </div>
                                                 <div class="col-md-6">
                                                     <br>
-                                                    <label for="contrato_correo_supervisor">Correo electrónico del supervisor</label>
-                                                    <input class="form-control" id="contrato_correo_supervisor"  type="email" name="supervisor_correo" placeholder="Ingrese el correo electrónico del supervisor" maxlength="100" value="{{ contrato.supervisor_correo }}" required>
-                                                    <div class="invalid-tooltip">
-                                                      Por favor digite el correo electrónico del supervisor.
-                                                    </div>
+                                                    {% input_email_tag 'supervisor_correo' 'Correo del Supervisor' placeholder="Ingrese el correo electrónico del supervisor" required="" maxlength="100" value=contrato.supervisor_correo mensaje_validacion='Por favor digite el correo electrónico del supervisor.'  %}
                                                 </div>
                                                 <div class="col-md-6">
                                                      <br>
-                                                    <label for="contrato_residente">Nombre del residente</label>
-                                                    <input class="form-control " id="contrato_residente" type="text" name="residente"  placeholder="Ingrese el nombre del residente" required maxlength="100" value="{{ contrato.residente }}">
-                                                    <div class="invalid-tooltip">
-                                                      Por favor digite el nombre del residente.
-                                                    </div>
+                                                    {% input_text_tag 'residente' 'Residente' placeholder="Ingrese el nombre del residente" required="" maxlength="100" value=contrato.residente mensaje_validacion='Por favor digite el nombre del residente.'  %}
                                                 </div>
                                                  <div class="col-md-6">
                                                      <br>
@@ -126,53 +89,24 @@
                                                 </div>
                                                 <div class="col-md-6">
                                                     <br>
-                                                    <label for="contrato_valor">Valor</label>
-                                                    <input class="form-control" id="contrato_valor" type="number" name="valor"  onInput="validarLongitud(11,this)" placeholder="Ingrese el valor del contrato" required min="0" max="99999999999" value="{{ contrato.valor }}">
-                                                    <div class="invalid-tooltip">
-                                                      Por favor digite un valor.
-                                                    </div>
+                                                    {% input_number_tag 'valor' 'Valor del contrato' placeholder="Ingrese el valor del contrato" required="" min='0' max="99999999999" onInput="validarLongitud(11,this)" value=contrato.valor mensaje_validacion='Por favor digite el valor del contrato.'  %}
+
                                                 </div>
                                                 <div class="col-md-6">
                                                     <br>
-                                                    <label for="contrato_periodicidad_informes">Periodicidad de informes</label>
-                                                    <input class="form-control" id="contrato_periodicidad_informes" type="number" min="0" max="1000"  onInput="validarLongitud(3,this)" name="periodicidad_informes" required placeholder="Ingrese la periodicidad de los informes"  value="{{ contrato.periodicidad_informes }}">
-                                                    <div class="invalid-tooltip">
-                                                      Por favor digite un valor.
-                                                    </div>
+                                                    {% input_number_tag 'periodicidad_informes' 'Periodicidad de informes' placeholder="Ingrese la periodiciad" required="" min='0' max="1000" onInput="validarLongitud(3,this)" value=contrato.periodicidad_informes mensaje_validacion='Por favor digite la periodicidad.'  %}
                                                 </div>
                                                 <div class="col-md-6">
                                                     <br>
-                                                    <label for="contrato_tiempo">Tiempo</label>
-                                                    <input class="form-control" id="contrato_tiempo" type="number" min="0" max="1000" name="tiempo"  onInput="validarLongitud(3,this)" placeholder="Ingrese el tiempo" required  value="{{ contrato.tiempo }}">
-                                                    <div class="invalid-tooltip">
-                                                      Por favor digite un valor.
-                                                    </div>
+                                                    {% input_number_tag 'tiempo' 'Tiempo' placeholder="Ingrese el tiempo" required="" min='0' max="1000" onInput="validarLongitud(3,this)" value=contrato.tiempo mensaje_validacion='Por favor digite el tiempo.'  %}
                                                 </div>
                                                 <div class="col-md-6">
                                                     <br>
-                                                    <label for="tipo_contrato_select">Tipo de contrato</label>
-                                                    <select class="select2 form-control" id="tipo_contrato_select" name="tipo_contrato_id" required >
-                                                        <option value="" >Seleccione un Tipo de Contrato</option>
-                                                        {% for tipo_contrato in tipo_contratos %}
-                                                            <option value="{{ tipo_contrato.id }}" {% if tipo_contrato.id == contrato.tipo_contrato_id %} selected {% endif %}>{{ tipo_contrato.nombre }}</option>
-                                                        {% endfor %}
-                                                    </select>
-                                                    <div class="invalid-tooltip">
-                                                      Por favor seleccione un contrato.
-                                                    </div>
+                                                {% select_tag tipo_contratos 'tipo_contrato_id' 'Seleccione un Tipo de Contrato' texto_label="Tipo de Contrato" value=contrato.tipo_contrato_id required="" mensaje_validacion='Por favor seleccione un tipo de contrato.' %}
                                                 </div>
                                                 <div class="col-md-6">
                                                     <br>
-                                                    <label for="empresa_select">Empresa</label>
-                                                    <select class="select2 form-control" id="empresa_select" name="empresa_id" required >
-                                                        <option value="" >Seleccione una Empresa</option>
-                                                        {% for empresa in empresas %}
-                                                            <option value="{{ empresa.id }}" {% if empresa.id == contrato.empresa_id %} selected {% endif %}>{{ empresa.nombre }}</option>
-                                                        {% endfor %}
-                                                    </select>
-                                                    <div class="invalid-tooltip">
-                                                      Por favor seleccione una empresa.
-                                                    </div>
+                                                {% select_tag empresas 'empresa_id' 'Seleccione una empresa' texto_label="Empresa" value=contrato.empresa_id required="" mensaje_validacion='Por favor seleccione una empresa.' %}
                                                 </div>
                                             </div>
                                         </div>
