EVA-15 refactor: Se emplea templatetag para los campos de fecha y se optimiza la plantilla.

--- a/Proyectos/templates/Proyectos/Contrato/crear-editar.html
+++ b/Proyectos/templates/Proyectos/Contrato/crear-editar.html
@@ -44,68 +44,69 @@
                                         <div class="form-group">
                                             <div class="form-row">
                                                  <div class="col-md-6">
-                                                 {% select_tag terceros 'cliente_id' 'Seleccione un Cliente' texto_label="Cliente" value=contrato.cliente.id required="" mensaje_validacion='Por favor seleccione un cliente.' %}
-
+                                                    {% select_tag terceros 'cliente_id' 'Seleccione un cliente' texto_label="Cliente" value=contrato.cliente.id required="" mensaje_validacion='Por favor seleccione un cliente.' %}
                                                   </div>
                                                 <div class="col-md-6">
                                                     {% input_text_tag 'numero_contrato' 'Número de Contrato' placeholder="Ingrese el número de contrato" required="" maxlength="20" value=contrato.numero_contrato mensaje_validacion='Por favor digite el número de contrato.'  %}
                                                 </div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="form-row">
                                                 <div class="col-md-6">
-                                                 <br>
-                                                {% select_tag rango_anho 'rango_anho' 'Seleccione un año' texto_label="Año" value=contrato.anho required="" mensaje_validacion='Por favor seleccione un año.' %}
-
+                                                    {% select_tag rango_anho 'rango_anho' 'Seleccione un año' texto_label="Año" value=contrato.anho required="" mensaje_validacion='Por favor seleccione un año.' %}
                                                 </div>
                                                 <div class="col-md-6">
-                                                     <br>
                                                     {% input_text_tag 'supervisor_nombre' 'Nombre del Supervisor' placeholder="Ingrese el nombre del supervisor" required="" maxlength="100" value=contrato.supervisor_nombre mensaje_validacion='Por favor digite el nombre del supervisor.'  %}
                                                 </div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="form-row">
                                                 <div class="col-md-6">
-                                                    <br>
                                                     {% input_text_tag 'supervisor_telefono' 'Teléfono del Supervisor' placeholder="Ingrese el número telefónico del supervisor" required="" maxlength="20" value=contrato.supervisor_telefono mensaje_validacion='Por favor digite el número telefónico del supervisor.'  %}
                                                 </div>
                                                 <div class="col-md-6">
-                                                    <br>
                                                     {% input_email_tag 'supervisor_correo' 'Correo del Supervisor' placeholder="Ingrese el correo electrónico del supervisor" required="" maxlength="100" value=contrato.supervisor_correo mensaje_validacion='Por favor digite el correo electrónico del supervisor.'  %}
                                                 </div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="form-row">
                                                 <div class="col-md-6">
-                                                     <br>
                                                     {% input_text_tag 'residente' 'Residente' placeholder="Ingrese el nombre del residente" required="" maxlength="100" value=contrato.residente mensaje_validacion='Por favor digite el nombre del residente.'  %}
                                                 </div>
                                                  <div class="col-md-6">
-                                                     <br>
-                                                    <label for="fecha_inicio">Fecha de inicio</label>
-                                                    <input class="form-control" id="fecha_inicio" name="fecha_inicio"  placeholder="Seleccione una fecha"  autocomplete="off" value="{{ contrato.fecha_inicio | date:'Y-m-d' }}" required>
-                                                     <div class="invalid-tooltip">
-                                                      Por favor seleccione una fecha.
-                                                    </div>
+                                                     {% input_date_tag 'fecha_inicio' 'Fecha de Inicio' placeholder="Seleccione una fecha" required=""  value=contrato.fecha_inicio autocomplete="off"  mensaje_validacion='Por favor seleccione una fecha.'  %}
                                                 </div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="form-row">
                                                  <div class="col-md-6">
-                                                     <br>
-                                                    <label for="fecha_terminacion">Fecha de terminación</label>
-                                                    <input class="form-control" id="fecha_terminacion" name="fecha_terminacion"  placeholder="Seleccione una fecha"  autocomplete="off" value="{{ contrato.fecha_terminacion | date:'Y-m-d' }}" required>
-                                                     <div class="invalid-tooltip">
-                                                      Por favor seleccione una fecha.
-                                                    </div>
+                                                     {% input_date_tag 'fecha_terminacion' 'Fecha de Terminacion' placeholder="Seleccione una fecha" required="" autocomplete="off" value=contrato.fecha_terminacion  mensaje_validacion='Por favor seleccione una fecha.'  %}
                                                 </div>
                                                 <div class="col-md-6">
-                                                    <br>
                                                     {% input_number_tag 'valor' 'Valor del contrato' placeholder="Ingrese el valor del contrato" required="" min='0' max="99999999999" onInput="validarLongitud(11,this)" value=contrato.valor mensaje_validacion='Por favor digite el valor del contrato.'  %}
-
                                                 </div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="form-row">
                                                 <div class="col-md-6">
-                                                    <br>
                                                     {% input_number_tag 'periodicidad_informes' 'Periodicidad de informes' placeholder="Ingrese la periodiciad" required="" min='0' max="1000" onInput="validarLongitud(3,this)" value=contrato.periodicidad_informes mensaje_validacion='Por favor digite la periodicidad.'  %}
                                                 </div>
                                                 <div class="col-md-6">
-                                                    <br>
                                                     {% input_number_tag 'tiempo' 'Tiempo' placeholder="Ingrese el tiempo" required="" min='0' max="1000" onInput="validarLongitud(3,this)" value=contrato.tiempo mensaje_validacion='Por favor digite el tiempo.'  %}
                                                 </div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="form-row">
                                                 <div class="col-md-6">
-                                                    <br>
-                                                {% select_tag tipo_contratos 'tipo_contrato_id' 'Seleccione un Tipo de Contrato' texto_label="Tipo de Contrato" value=contrato.tipo_contrato_id required="" mensaje_validacion='Por favor seleccione un tipo de contrato.' %}
+                                                {% select_tag tipo_contratos 'tipo_contrato_id' 'Seleccione un tipo de contrato' texto_label="Tipo de Contrato" value=contrato.tipo_contrato_id required="" mensaje_validacion='Por favor seleccione un tipo de contrato.' %}
                                                 </div>
                                                 <div class="col-md-6">
-                                                    <br>
                                                 {% select_tag empresas 'empresa_id' 'Seleccione una empresa' texto_label="Empresa" value=contrato.empresa_id required="" mensaje_validacion='Por favor seleccione una empresa.' %}
                                                 </div>
                                             </div>
@@ -127,7 +128,6 @@
             </div>
         </div>
     </div>
-
 {% endblock main %}
 
 {% block scripts %}
@@ -140,5 +140,4 @@
 		    $('.select2').select2();
 		});
 	</script>
-
 {% endblock scripts %}
