--- a/Administracion/templates/Administracion/Tercero/crear-editar.html
+++ b/Administracion/templates/Administracion/Tercero/crear-editar.html
@@ -35,40 +35,40 @@
                                         <div class="form-group">
                                             <div class="form-row">
                                                 <div class="col-md-6">
-                                                    {% input_text_tag 'nombre' 'Nombre' placeholder="Ingrese el nombre" required="" maxlength="100" value=tercero.nombre mensaje_validacion='Por favor digite el nombre.'  %}
+                                                    {% input_text_tag 'nombre' 'Nombre' placeholder="Ingrese el nombre" required="" maxlength="100" value=tercero.nombre mensaje_validacion='Por favor digite el nombre.' invalido=errores.nombre %}
                                                 </div>
                                                 <div class="col-md-6">
-                                                    {% input_text_tag 'identificacion' 'Identificación' placeholder='Ingrese el número de identificación' required='' maxlength='15' value=tercero.identificacion mensaje_validacion='Por favor digite la identificación'  %}
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="form-group">
-                                            <div class="form-row">
-                                                <div class="col-md-6">
-                                                {% select_tag tipos_identificacion 'tipo_identificacion_id' 'Seleccione un tipo de identificación' texto_label="Tipo de Identificación" value=tercero.tipo_identificacion_id required="" mensaje_validacion='Por favor seleccione un tipo de identificación.' %}
-                                                </div>
-                                                <div class="col-md-6">
-                                                {% select_tag empresas 'empresa_id' 'Seleccione una empresa' texto_label="Empresa" value=tercero.empresa_id required="" mensaje_validacion='Por favor seleccione una empresa.' %}
+                                                    {% input_text_tag 'identificacion' 'Identificación' placeholder='Ingrese el número de identificación' required='' maxlength='15' value=tercero.identificacion mensaje_validacion='Por favor digite la identificación' invalido=errores.identificacion %}
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="form-group">
                                             <div class="form-row">
                                                 <div class="col-md-6">
-                                                {% select_tag tipo_terceros 'tipo_tercero_id' 'Seleccione un tipo de tercero' texto_label='Tipo de tercero' value=tercero.tipo_tercero_id required='' mensaje_validacion='Por favor seleccione un tipo de tercero.' %}
+                                                {% select_tag tipos_identificacion 'tipo_identificacion_id' 'Seleccione un tipo de identificación' texto_label="Tipo de Identificación" value=tercero.tipo_identificacion_id required="" mensaje_validacion='Por favor seleccione un tipo de identificación.' invalido=errores.tipo_identificacion %}
+                                                </div>
+                                                <div class="col-md-6">
+                                                {% select_tag empresas 'empresa_id' 'Seleccione una empresa' texto_label="Empresa" value=tercero.empresa_id required="" mensaje_validacion='Por favor seleccione una empresa.' invalido=errores.empresa %}
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="form-row">
+                                                <div class="col-md-6">
+                                                {% select_tag tipo_terceros 'tipo_tercero_id' 'Seleccione un tipo de tercero' texto_label='Tipo de tercero' value=tercero.tipo_tercero_id required='' mensaje_validacion='Por favor seleccione un tipo de tercero.' invalido=errores.tipo_tercero %}
                                                 </div>
                                                  <div class="col-md-6">
-                                                 {% select_tag departamentos 'departamento_id' 'Seleccione un departamento' texto_label="Departamento" value=tercero.centro_poblado.municipio.departamento.id required="" mensaje_validacion='Por favor seleccione un departamento.' %}
+                                                 {% select_tag departamentos 'departamento_id' 'Seleccione un departamento' texto_label="Departamento" value=tercero.centro_poblado.municipio.departamento.id required="" mensaje_validacion='Por favor seleccione un departamento.'  %}
                                                  </div>
                                             </div>
                                         </div>
                                         <div class="form-group">
                                             <div class="form-row">
                                                 <div class="col-md-6">
-                                                {% select_tag municipios 'municipio_id' 'Seleccione un municipio' texto_label="Municipio" value=tercero.centro_poblado.municipio.id required="" mensaje_validacion='Por favor seleccione un municipio.' %}
+                                                {% select_tag municipios 'municipio_id' 'Seleccione un municipio' texto_label="Municipio" value=tercero.centro_poblado.municipio.id required="" mensaje_validacion='Por favor seleccione un municipio.'  %}
                                                 </div>
                                                 <div class="col-md-6">
-                                                {% select_tag centros_poblados 'centro_poblado_id' 'Seleccione un centro poblado' texto_label="Centro Poblado" value=tercero.centro_poblado.id required="" mensaje_validacion='Por favor seleccione un centro poblado.' %}
+                                                {% select_tag centros_poblados 'centro_poblado_id' 'Seleccione un centro poblado' texto_label="Centro Poblado" value=tercero.centro_poblado.id required="" mensaje_validacion='Por favor seleccione un centro poblado.' invalido=errores.centro_poblado %}
                                                 </div>
                                             </div>
                                         </div>
