--- a/Administracion/templates/Administracion/Tercero/index.html
+++ b/Administracion/templates/Administracion/Tercero/index.html
@@ -25,7 +25,7 @@
                         <div class="panel-hdr">
 
                             <small>
-                                 <a href="{% url 'Administracion:terceros-crear' %}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Agregar tercero"><i class="far fa-2x far fa-plus-circle" style="margin-right: 8px"></i><label style="font-size: 18px" >Agregar</label></a>
+                                 <a class="far fa-2x far fa-plus-circle" style="margin-right: 8px" href="{% url 'Administracion:terceros-crear' %}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Agregar tercero"><label style="font-size: 18px" >Agregar</label></a>
                             </small>
                         </div>
                         <div class="panel-container show">
