EVA-17 fix: Se corrige error de intermitencia en el tooltip de agregar contratos.

--- a/Proyectos/templates/Proyectos/Contrato/index.html
+++ b/Proyectos/templates/Proyectos/Contrato/index.html
@@ -24,7 +24,7 @@
                         <div class="panel-hdr">
 
                             <small>
-                                 <a href="{% url 'Proyectos:contratos-crear' %}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Agregar contrato"><i class="far fa-2x far fa-plus-circle" style="margin-right: 8px"></i><label style="font-size: 18px" >Agregar</label></a>
+                                 <a class="far fa-2x far fa-plus-circle" style="margin-right: 8px" href="{% url 'Proyectos:contratos-crear' %}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Agregar contrato"><label style="font-size: 18px" >Agregar</label></a>
                             </small>
                         </div>
                         <div class="panel-container show">
