EVA-21 refactor: Se asigna el id 0 para visualizar toas las entidades en el index.

--- a/TalentoHumano/templates/TalentoHumano/Entidades_CAFE/crear-editar.html
+++ b/TalentoHumano/templates/TalentoHumano/Entidades_CAFE/crear-editar.html
@@ -75,7 +75,7 @@
                                                     <button id="guardar" class="btn btn-primary btn-block">{% if opcion == 'editar' %} Actualizar {% else %} Agregar {% endif %}</button>
                                                 </div>
                                                 <div style="padding-left: 15px">
-                                                    <a href="{% url 'TalentoHumano:entidades-index' %}" class="btn btn-danger btn-block">Cancelar</a>
+                                                    <a href="{% url 'TalentoHumano:entidades-index' 0 %}" class="btn btn-danger btn-block">Cancelar</a>
                                                 </div>
                                             </div>
                                     </form>
