--- a/TalentoHumano/templates/TalentoHumano/Entidades_CAFE/index.html
+++ b/TalentoHumano/templates/TalentoHumano/Entidades_CAFE/index.html
@@ -24,13 +24,14 @@
                 <div class="col-xl-12">
                     <div id="panel-1" class="panel">
                         <div class="panel-panel-default">
-                            <div class="panel-body">
-                            <small>
-                                 <a class="far fa-2x far fa-plus-circle" style="margin-right: 8px" href="{% url 'TalentoHumano:entidades-crear' %}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Agregar contrato"><label style="font-size: 18px" >Agregar</label></a>
-                            </small>
-                            <div class="col-md-2" >
-                                {% select_tag tipos_entidades 'tipo_entidad_id' 'Seleccione una opción' texto_label="Entidades" value=entidad_cafe.tipo_entidad_id   %}
-                            </div>
+                            <div class="panel-header">
+                                <br>
+                                <small>
+                                     <a class="far fa-3x far fa-plus-circle" style="padding-left: 20px" href="{% url 'TalentoHumano:entidades-crear' %}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Agregar contrato"><label style="font-size: 18px" ></label></a>
+                                </small>
+                                <div class="col-md-2" style="float: right" >
+                                    {% select_tag tipos_entidades 'tipo_entidad_id' '' value=id_entidad  %}
+                                </div>
                             </div>
                         </div>
                         <div class="panel-container show">
@@ -92,6 +93,7 @@
     <script src="{% static 'EVA/Plantilla/js/datagrid/datatables/datatables.bundle.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/custom/ajaxDjango.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/formplugins/select2/select2.bundle.js' %}"></script>
+    <script src="{% static 'TalentoHumano/js/filtro_entidad.js' %}"></script>
         <!-- datatbles buttons bundle contains:
     + "jszip.js",
     + "pdfmake.js",
