EVA-21 refactor: Se corrige tooltip del ícono de agregar Entidad CAFE

--- a/TalentoHumano/templates/TalentoHumano/Entidades_CAFE/index.html
+++ b/TalentoHumano/templates/TalentoHumano/Entidades_CAFE/index.html
@@ -27,7 +27,7 @@
                             <div class="panel-header">
                                 <br>
                                 <small>
-                                     <a class="far fa-3x far fa-plus-circle" style="padding-left: 20px" href="{% url 'TalentoHumano:entidades-crear' %}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Agregar contrato"><label style="font-size: 18px" ></label></a>
+                                     <a class="far fa-3x far fa-plus-circle" style="padding-left: 20px" href="{% url 'TalentoHumano:entidades-crear' %}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Agregar Entidad CAFE"><label style="font-size: 18px" ></label></a>
                                 </small>
                                 <div class="col-md-2" style="float: right" >
                                     {% select_tag tipos_entidades 'tipo_entidad_id' '' value=id_entidad  %}
