--- a/Proyectos/templates/Proyectos/Contrato/index.html
+++ b/Proyectos/templates/Proyectos/Contrato/index.html
@@ -22,14 +22,12 @@
                 <div class="col-xl-12">
                     <div id="panel-1" class="panel">
                         <div class="panel-hdr">
-
                             <small>
-                                 <a class="far fa-2x far fa-plus-circle" style="margin-right: 8px" href="{% url 'Proyectos:contratos-crear' %}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Agregar contrato"><label style="font-size: 18px" >Agregar</label></a>
+                                 <a class="far fa-3x far fa-plus-circle"  href="{% url 'Proyectos:contratos-crear' %}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Agregar contrato"></a>
                             </small>
                         </div>
                         <div class="panel-container show">
                             <div class="panel-content">
-
                                     <div class="panel-group">
                                         <div class="panel-body">
                                             <div class="table-responsive">
